# minitrue

./: .gitignore  Application.hs  Auth.hs  Bootstrap.hs  Foundation.hs  Import.hs  Languages.hs  ListMail.hs  Mail.hs  Model.hs  README.md  Roles.hs  Settings.hs  cabal.config  devel.hs  minitrue.cabal  stack.yaml
Handler/: Category.hs  Events.hs  Home.hs  List.hs  Subscriptions.hs  User.hs
Import/: NoFoundation.hs
app/: devel.hs
config/: keter.yaml  minitrue.service  models  postgresql.yml  routes  settings.yml
deploy/: Procfile
messages/: de-DE.msg  de.msg  en.msg
static/css/: jquery-ui.css
templates/: categories.hamlet  category-actions.hamlet  category.hamlet  default-layout-wrapper.hamlet  default-layout.cassius  default-layout.hamlet  edit.hamlet  event-actions.hamlet  event.hamlet  events-table.cassius  events-table.hamlet  events.hamlet  forgot-password.hamlet  list-actions.hamlet  list-edit.hamlet  list-entry.hamlet  list-events.hamlet  list.hamlet  lists.hamlet  login.hamlet  navbar.hamlet  password.hamlet  register.hamlet  send-message.hamlet  subscriber-actions.hamlet  subscriptions-actions.hamlet  subscriptions.hamlet  unsubscribe.hamlet  user-delete.hamlet  user-entry-role.hamlet  user-role.hamlet  users.hamlet
tests/: ListTest.hs  main.hs
